[package]
name = "kaihoukun-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.36.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Controls", "alloc", "Win32_System_Com", "Win32_NetworkManagement_WindowsFirewall", "Win32_Networking_WinSock"] }

[build-dependencies]
embed-resource = "1.7.2"