[package]
name = "kaihoukun-rs"
version = "0.3.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.37.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "alloc",
    "Win32_System_Com",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }

[build-dependencies]
embed-resource = "1.7.2"

[profile.release]
strip = true
