[package]
name = "kaihoukun-rs"
version = "0.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_IO",
] }

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
strip = true
lto = true
